--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
 	  <artifactId>javax.persistence</artifactId>
 	  <version>2.2.1</version>
 	 </dependency>
+	 <dependency>
+	  <groupId>org.springframework.boot</groupId>
+	  <artifactId>spring-boot-configuration-processor</artifactId>
+	  <optional>true</optional>
+	 </dependency>
 	</dependencies>
 
 	<build>
